Adding new nested model Gardian for Academic Management admission form

--- a/app/views/admissions/_form.html.erb
+++ b/app/views/admissions/_form.html.erb
@@ -77,18 +77,18 @@
   </div>
 
   <div class="control-group">
-    <%= f.label :passing_year, :class => 'control-label' %>
+    <%= f.label :passong_year, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :passing_year, :class => 'text_field',:placeholder => 'Enter Year of Passout', :required => true %>
+      <%= f.text_field :passong_year, :class => 'text_field',:placeholder => 'Enter Year of Passout', :required => true %>
     </div>
   </div>
 
   <h3>Additional Details.</h3>
 
   <div class="control-group">
-    <%= f.label :driving_license, :class => 'control-label' %>
+    <%= f.label :driving_lecense, :class => 'control-label' %>
     <div class="controls">
-      <%= f.check_box :driving_license, :class => 'check_box' %>
+      <%= f.check_box :driving_lecense, :class => 'check_box' %>
     </div>
   </div>
 
